logs/watchdog_20251012_1100.log
[12/10/2025 11:00:01,64] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 11:00:01,93] END WATCHDOG 
